--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav></app-nav>
 
+<app-footer></app-footer>
+
 <router-outlet></router-outlet>
