--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
 
-    <a class="navbar-brand" [routerLink]="['../']">Lista de Compras</a>
+    <a class="navbar-brand" [routerLink]="['../']" title="Página Inicial">
+      <i class="fas fa-shopping-cart" [routerLink]="['../']" title="Página Inicial">&nbsp;</i>SGLC
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,24 +22,6 @@
         </li> -->
       </ul>
     </div>
-
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown" dropdown>
-        <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Ana :D
-        </a>
-        <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item">
-            Perfil
-          </a>
-          <div role="separator" class="divider"></div>
-          <a class="dropdown-item">
-            Sair
-          </a>
-        </div>
-      </li>
-    </ul>
 
   </div>
 </nav>
