Adiciona componentes referentes a página inicial do sistema

--- a/src/app/components/pagina-inicial/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/components/pagina-inicial/pagina-inicial/pagina-inicial.component.html
@@ -1,3 +1,8 @@
-<p>
-  pagina-inicial works!
-</p>
+<div class="container principal">
+  <h3 class="titulo">SGLC - Sistema de gerenciamento de lista de compras</h3>
+  <div class="pagina-inicial">
+    <!--Acrescentar imagem aqui-->
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque fermentum pellentesque nunc, eu tempor tellus convallis quis. Proin sit amet bibendum purus. Suspendisse potenti. Morbi mollis nisl quis urna sagittis varius ut ut purus. Duis quis odio faucibus, consequat risus bibendum, tempor lectus. Morbi aliquam, nunc sed faucibus rutrum, diam nisl pharetra quam, quis scelerisque velit nulla at orci. Ut ut enim feugiat, ullamcorper magna dapibus, porta orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam eleifend ante ac ante convallis, nec molestie est consequat. Curabitur vitae consequat dui. Phasellus luctus nunc odio, id posuere turpis malesuada at. Nam iaculis, lacus a malesuada viverra, mi elit elementum purus, sit amet feugiat magna justo eget arcu. Nulla blandit commodo suscipit. Ut fermentum, erat eget laoreet condimentum, nulla nulla fringilla magna, sed sodales erat magna quis risus. Nunc auctor lacinia laoreet. Nullam sagittis nisi et sem laoreet, sed interdum mauris vulputate.</p>
+    <p>Vivamus consectetur turpis eu nisi finibus viverra. Praesent commodo placerat sem et gravida. Nunc ut nibh vitae lectus tincidunt convallis eu tincidunt turpis. Nunc mi mi, lacinia vel ullamcorper vel, fermentum eu velit. Quisque accumsan ligula sit amet urna ornare, vel condimentum ipsum fermentum. Quisque a consequat nisl, eu rutrum nisi. Aliquam erat volutpat. Curabitur consequat hendrerit luctus. Nulla ut eros vel dolor aliquam lobortis. Nulla enim nisi, posuere a ligula consequat, pretium malesuada ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse dui dolor, luctus nec lorem vitae, auctor bibendum tortor.</p>
+  </div>
+</div>
