--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <span>Copyright © 2019 Winter Lab - Todos os direitos reservados</span>
+  <span>Copyright © 2019 Ana Beatriz Garcia - Todos os direitos reservados</span>
 </div>
