Correção de bug e na página inicial

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -12,14 +12,11 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['../cadastro-produto']">Cadastro de produto</a>
+          <a class="nav-link" [routerLink]="['../cadastrar-lista-de-compra']">Criar Lista de Compra</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Palestrantes</a>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['../lista-de-compra']">Suas Listas de Compra</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contatos</a>
-        </li> -->
       </ul>
     </div>
 
