Ajustes nos componentes de cadastro de categoria

--- a/src/app/components/categoria/cadastro-categoria-adm/cadastro-categoria-adm.component.html
+++ b/src/app/components/categoria/cadastro-categoria-adm/cadastro-categoria-adm.component.html
@@ -2,7 +2,7 @@
   <div class="alert {{classeMensagem}}" role="alert" *ngIf="mensagem && mensagem.length > 0">
     {{ mensagem }}
   </div>
-  <h3 class="titulo">Categorias sugeridas pelos usuários</h3>
+  <h3 class="titulo">Categorias Sugeridas</h3>
   <div class="col-lg-8 inner">
     <table class="table table-striped">
       <thead class="thead-dark">
