--- a/src/app/components/categoria/cadastro-categoria/categoria.component.html
+++ b/src/app/components/categoria/cadastro-categoria/categoria.component.html
@@ -2,7 +2,7 @@
   <div class="alert {{classeMensagem}}" role="alert" *ngIf="mensagem && mensagem.length > 0">
     {{ mensagem }}
   </div>
-  <h3 class="titulo">Categoria de produto</h3>
+  <h3 class="titulo">Categoria de Produto</h3>
   <div class="pagina-inicial descricao">
     <p>Usuário, você pode sugerir categorias, caso não esteja satisfeito com as existentes no sistema.
     Os administradores do sistema são responsáveis por aprovar ou não as sugestões.
