--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -12,10 +12,23 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['../cadastrar-lista-de-compra']">Criar Lista de Compra</a>
+          <a class="nav-link" [routerLink]="['../cadastrar-lista-de-compra']">Cadastrar Lista de Compra</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['../operador/cadastro-produto']">Cadastrar Produto</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['../lista-de-compra']">Suas Listas de Compra</a>
+        </li>
+        <!-- TODO após a implementação do login, retirar do menu os itens abaixo-->
+        <li class="nav-item active">
+          <a class="nav-link">#############</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['../adm/aprovar-produto']">ADM-Aprovar prod</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['../adm/cadastro-categoria']">ADM-Aprovar Cat.</a>
         </li>
       </ul>
     </div>
