--- a/src/app/components/compras/listagem-lista-compra/listagem-lista-compra.component.html
+++ b/src/app/components/compras/listagem-lista-compra/listagem-lista-compra.component.html
@@ -1,16 +1,16 @@
 <div class="container" style="padding: 36px;">
-  <!-- <div>
+  <div>
     <div class="alert {{classeMensagem}}" role="alert" *ngIf="mensagem && mensagem.length > 0">
       {{ mensagem }}
     </div>
-  </div> -->
+  </div>
   <h3 class="titulo">Listas de Compras</h3>
   <div class="row">
     <div class="col-lg-10 inner">
       <div class="row">
         <p class="col-lg-12 botao">
           <button type="button" class="btn btn-dark" (click)="mostrarLista = !mostrarLista">
-            Apresentar lista de compras
+            {{ mostrarLista ? 'Ocultar lista de compras' : 'Apresentar lista de compras' }}
           </button>
         </p>
       </div>
@@ -29,7 +29,7 @@
                 <button class="btn btn-sm btn-success" tooltip="Abrir">
                   <i class="fa fa-check-circle"></i>
                 </button>&nbsp;
-                <button class="btn btn-sm btn-danger" tooltip="Excluir">
+                <button class="btn btn-sm btn-danger" tooltip="Excluir" (click)="excluir(compra.id)">
                   <i class="fa fa-eraser"></i>
                 </button>
               </div>
