--- a/src/app/components/compras/listagem-lista-compra/listagem-lista-compra.component.html
+++ b/src/app/components/compras/listagem-lista-compra/listagem-lista-compra.component.html
@@ -29,7 +29,7 @@
                 <button class="btn btn-sm btn-success" tooltip="Abrir">
                   <i class="fa fa-check-circle"></i>
                 </button>&nbsp;
-                <button class="btn btn-sm btn-danger" tooltip="Excluir" (click)="excluir(compra.id)">
+                <button class="btn btn-sm btn-danger" tooltip="Excluir" (click)="excluirLista(compra, confirm)">
                   <i class="fa fa-eraser"></i>
                 </button>
               </div>
@@ -48,7 +48,30 @@
       </table>
     </div>
   </div>
-  <div class="row">
+</div>
 
+<div bsModal #confirm="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-md">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">
+          Rejeitar Categoria
+        </h4>
+        <button type="button" class="close pull-right" (click)="confirm.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{bodyExcluirListaCompra}}</p>
+      </div>
+      <div class="modal-footer btn-group d-flex">
+        <button type="button" class="btn btn-outline-primary" (click)="confirm.hide()">
+          CANCELAR
+        </button>
+        <button type="button" class="btn btn-outline-danger" (click)="excluir(confirm)">
+          EXCLUIR
+        </button>
+      </div>
+    </div>
   </div>
 </div>
