--- a/src/app/components/produto/aprovar-produto/aprovar-produto.component.html
+++ b/src/app/components/produto/aprovar-produto/aprovar-produto.component.html
@@ -22,7 +22,7 @@
             <button class="btn btn-sm btn-success" tooltip="Aceitar" (click)="aceitar(produto)">
               <i class="fa fa-save"></i>
             </button>&nbsp;
-            <button class="btn btn-sm btn-danger" tooltip="Rejeitar" (click)="rejeitar(produto.id)">
+            <button class="btn btn-sm btn-danger" tooltip="Rejeitar" (click)="rejeitarProduto(produto, confirm)">
               <i class="fa fa-eraser"></i>
             </button>
           </td>
@@ -38,5 +38,31 @@
         </tr>
       </tfoot>
     </table>
+  </div>
+</div>
+
+<div bsModal #confirm="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-md">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">
+          Rejeitar Produto
+        </h4>
+        <button type="button" class="close pull-right" (click)="confirm.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{bodyRejeitarProduto}}</p>
+      </div>
+      <div class="modal-footer btn-group d-flex">
+        <button type="button" class="btn btn-outline-primary" (click)="confirm.hide()">
+          CANCELAR
+        </button>
+        <button type="button" class="btn btn-outline-danger" (click)="rejeitar(confirm)">
+          REJEITAR
+        </button>
+      </div>
+    </div>
   </div>
 </div>
