--- a/src/app/components/pagina-inicial/login/login.component.html
+++ b/src/app/components/pagina-inicial/login/login.component.html
@@ -16,7 +16,7 @@
               <div class="form-group">
                 <label class='label-vol'>Usuário: </label>
                 <input class="form-control" id='usuário' placeholder="Usuário" formControlName="usuario"
-                  [ngClass]="'is-invalid'">
+                  [ngClass]="{'is-invalid': loginForm.get('usuario').hasError('required') && loginForm.get('usuario').touched}">
                 <div *ngIf="loginForm.get('usuario').hasError('required') && loginForm.get('usuario').touched"
                   class="invalid-feedback">
                   Usuário é obrigatório.
@@ -27,7 +27,7 @@
               <div class="form-group">
                 <label class='label-vol'>Senha:</label>
                 <input class="form-control" type="password" placeholder="Senha" formControlName="senha"
-                  [ngClass]="'is-invalid'">
+                  [ngClass]="{'is-invalid': loginForm.get('senha').hasError('required') && loginForm.get('senha').touched}">
                 <div *ngIf="loginForm.get('senha').hasError('required') && loginForm.get('senha').touched"
                   class="invalid-feedback">
                   Senha é obrigatória.
