--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -30,6 +30,9 @@
         <li class="nav-item active">
           <a class="nav-link" [routerLink]="['../adm/cadastro-categoria']">ADM-Aprovar Cat.</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['../login']">LOGIN</a>
+        </li>
       </ul>
     </div>
 
