--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -1,11 +1,25 @@
-<p>
-  administrador works!
-</p>
-<ul>
-  <li class="nav-item active" *ngIf="isAdm">
-    <a class="nav-link" [routerLink]="['../adm/aprovar-produto']">ADM-Aprovar prod</a>
-  </li>
-  <li class="nav-item active" *ngIf="isAdm">
-    <a class="nav-link" [routerLink]="['../adm/cadastro-categoria']">ADM-Aprovar Cat.</a>
-  </li>
-</ul>
+<div class="container principal">
+  <h3 class="titulo">Área do Administrador</h3>
+  <div class="pagina-inicial">
+    <p>Olá, Adm! Espero que esteja bem!</p>
+    <p>Nessa sessão do sistema você poderá controlar quais produtos e categorias cadastrados pelos usuários devem fazer parte do sistema.</p>
+    <p>Você também pode cadastrar novos usuários sendo eles administradores do sistema ou não. Além de poder fazer o controle dos usuários já cadastrados.</p>
+    <p>Qualquer problema encontrado, entre em contato com a assistência! Bom trabalho!</p>
+  </div>
+  <div class="row">
+    <div class="col-lg-12 botoes_adm">
+      <button type="button" class="btn btn-dark" [routerLink]="['/adm/aprovar-produto']">
+        Aprovar produtos
+      </button>&nbsp;
+      <button type="button" class="btn btn-dark" [routerLink]="['/adm/aprovar-categoria']">
+        Aprovar categorias
+      </button>&nbsp;
+      <button type="button" class="btn btn-dark" [routerLink]="['/cadastro-usuario']">
+        Cadastro de usuário
+      </button>&nbsp;
+      <button type="button" class="btn btn-dark" [routerLink]="['/']">
+        Controle de usuário
+      </button>
+    </div>
+  </div>
+</div>
