--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -25,16 +25,10 @@
             Senha é obrigatório.
           </div>
         </div>
-        <div class="form-group col-lg-2" style="margin-top: 38px;">
+        <div *ngIf="isAdm" class="form-group col-lg-2" style="margin-top: 38px;">
           <div class="form-check">
             <input class="form-check-input" type="checkbox" formControlName="isAdm">
             <label class="form-check-label">Administrador</label>
-          </div>
-        </div>
-        <div class="form-group col-lg-2" style="margin-top: 38px;">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" formControlName="isOperador">
-            <label class="form-check-label">Operador</label>
           </div>
         </div>
       </div>
@@ -46,7 +40,10 @@
           <button type="button" class="btn btn-secondary" (click)="limpar()">
             Limpar
           </button>&nbsp;
-          <button type="button" class="btn btn-secondary" [routerLink]="['/login']">
+          <button *ngIf="!isAdm" type="button" class="btn btn-secondary" [routerLink]="['/login']">
+            Voltar
+          </button>
+          <button *ngIf="isAdm" type="button" class="btn btn-secondary" [routerLink]="['/adm']">
             Voltar
           </button>
         </p>
