--- a/src/app/components/categoria/cadastro-categoria-adm/cadastro-categoria-adm.component.html
+++ b/src/app/components/categoria/cadastro-categoria-adm/cadastro-categoria-adm.component.html
@@ -36,6 +36,13 @@
         </tr>
       </tfoot>
     </table>
+    <div class="row">
+      <div class="col-lg-12 botao">
+        <button type="button" class="btn btn-secondary" [routerLink]="['/adm']">
+          Voltar
+        </button>
+      </div>
+    </div>
   </div>
 </div>
 
