--- a/src/app/components/produto/aprovar-produto/aprovar-produto.component.html
+++ b/src/app/components/produto/aprovar-produto/aprovar-produto.component.html
@@ -38,6 +38,13 @@
         </tr>
       </tfoot>
     </table>
+    <div class="row">
+      <div class="col-lg-12 botao">
+        <button type="button" class="btn btn-secondary" [routerLink]="['/adm']">
+          Voltar
+        </button>
+      </div>
+    </div>
   </div>
 </div>
 
