Muda rotas devido a criação do componente de admistrador

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -15,7 +15,7 @@
             title="Cadastrar Lista de Compra">Cadastrar Lista de Compra</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['../operador/cadastro-produto']"
+          <a class="nav-link" [routerLink]="['../adm/cadastro-produto']"
             title="Cadastrar Produto">Cadastrar Produto</a>
         </li>
         <li class="nav-item active">
